# dicebear-py

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  generate.yml  publish.yml
docs/: README.md  SUMMARY.md  changelog.md  license.md
docs/reference/: models.md
docs/start/: customization.md  statistics.md
scripts/: fetch_schemas.py  generate.py  generate_styles.py
src/dicebear/: __init__.py  _loader.py  _options_resolver.py  _prng.py  _renderer.py  avatar.py  errors.py  metadata.py  models.py  options.py  types.py  utility.py
src/dicebear/styles/: __init__.py  _base.py  _style.py  adventurer.py  adventurer_neutral.py  avataaars.py  avataaars_neutral.py  big_ears.py  big_ears_neutral.py  big_smile.py  bottts.py  bottts_neutral.py  croodles.py  croodles_neutral.py  disco.py  dylan.py  fun_emoji.py  glass.py  glyphs.py  icons.py  identicon.py  initial_face.py  initials.py  lorelei.py  lorelei_neutral.py  micah.py  miniavs.py  notionists.py  notionists_neutral.py  open_peeps.py  personas.py  pixel_art.py  pixel_art_neutral.py  rings.py  shape_grid.py  shapes.py  stripes.py  thumbs.py  toon_head.py  triangles.py
src/dicebear/styles/schemas/: adventurer-neutral.json  adventurer.json  avataaars-neutral.json  avataaars.json  big-ears-neutral.json  big-ears.json  big-smile.json  bottts-neutral.json  bottts.json  croodles-neutral.json  croodles.json  disco.json  dylan.json  fun-emoji.json  glass.json  glyphs.json  icons.json  identicon.json  initial-face.json  lorelei-neutral.json  lorelei.json  micah.json  miniavs.json  notionists-neutral.json  notionists.json  open-peeps.json  personas.json  pixel-art-neutral.json  pixel-art.json  rings.json  shape-grid.json  shapes.json  stripes.json  toon-head.json  triangles.json
tests/: __init__.py  test_avatar.py  test_main.py  test_options_resolver.py  test_prng.py  test_renderer.py
